Implements accessory buying/equiping/unequiping