@@ -17,6 +17,7 @@ import com.mygdx.aoc.manager.ResourceManager;
 
 import java.math.BigDecimal;
 import java.math.BigInteger;
+import java.util.Random;
 
 
 public class Accessory extends Widget {
@@ -35,12 +36,18 @@ public class Accessory extends Widget {
     private BigDecimal price;
     private Color backColor, fillColor;
     private Rectangle actionButton = new Rectangle();
+    private boolean buttonHeld = false;
+    private Random random;
 
     public Accessory(FileHandle file) {
         final Accessory self = this;
         name = file.nameWithoutExtension().substring(3);
 
         ResourceManager.json.fromJson(AccessoryData.class, file).copyTo(this);
+
+//        float a = this.random.nextFloat(), b = random.nextFloat(), c = random.nextFloat();
+//        float mult1 = 1.25f / (a + b + c), mult2 = 2.f / (a + b + c);
+//        backColor = new Color(a * mult1, b * mult1, c * mult1, 1);
 
         Preferences prefs = ResourceManager.prefs;
         purchased = prefs.getBoolean(name + "PurchasedAccessory", false);
@@ -69,10 +76,13 @@ public class Accessory extends Widget {
         addListener(new InputListener() {
             public boolean touchDown(InputEvent event, float x, float y, int pointer, int button) {
                 System.out.println("Hey you clicked at " + name + " (" + x + ", " + y + ")");
-                return actionButton.contains(x, y);
+                if (!buttonHeld && actionButton.contains(x, y))
+                    buttonHeld = true;
+                return buttonHeld;
             }
 
             public void touchUp(InputEvent event, float x, float y, int pointer, int button) {
+                buttonHeld = false;
                 if (actionButton.contains(x, y))
                     if (!purchased && buyAccessory()) {
                         buttonState = "Equip";
@@ -151,7 +161,10 @@ public class Accessory extends Widget {
         image.draw(batch, getX() - 150, getY() - 1920 * .26f, 1080 * .5f, 1920 * .5f);
         batch.setColor(fillColor);
         fontTiny.draw(batch, name, 50 + getX() + 200, getY() + h4 * 2.f + s2);
-        batch.setColor(Color.LIME);
+        Color buttonColor = Color.GREEN;
+        if (!purchased && User.capybaras.compareTo(price) < 0) buttonColor = Color.GRAY;
+        else if (buttonHeld || equiped) buttonColor = Color.LIME;
+        batch.setColor(buttonColor);
         actionButton.set(50 + getWidth() * .55f, h4 * .75f, 300, h4 * 2.5f);
         pixel.draw(batch, getX() + actionButton.x, getY() + actionButton.y, actionButton.width, actionButton.height);
         batch.setColor(Color.WHITE);
@@ -160,6 +173,7 @@ public class Accessory extends Widget {
                 fontSmall.draw(batch, buttonState, getX() + actionButton.x + getWidth() * 0.03f, getY() + actionButton.y + actionButton.height * .7f + s2);
             else
                 fontSmall.draw(batch, buttonState, 30 + getX() + actionButton.x + getWidth() * 0.03f, getY() + actionButton.y + actionButton.height * .7f + s2);
+
         }
         else {
             BigInteger p = price.toBigInteger();
@@ -170,13 +184,15 @@ public class Accessory extends Widget {
 
     private static class AccessoryData {
         String type, price, imageName;
+        Long seed;
 
         public AccessoryData() {
         }
 
         public void copyTo(Accessory a) {
-            a.type = new Integer(type);
-            a.imageName = new String(imageName);
+            a.random = new Random(seed);
+            a.type = Integer.valueOf(type);
+            a.imageName = imageName;
             a.price = new BigDecimal(price);
         }
     }
